# KP_2course

./: .gitignore  README.md
Topic_1/: README.md
Topic_10/: LR10_КП_4сем.py  README.md
Topic_11/: LR11.py  README.md
Topic_12/: README.md
Topic_13/: README.md
Topic_14/: README.md  main.py
Topic_15/: README.md
Topic_16/: .env  README.md  example.py  КП_ЛР16_АномалияПотерянное обновление.py
Topic_17/calc-main/: main.py  params.ini  pyproject.toml
Topic_18/: README.md  index.html  main.js  styles.css
Topic_19/: README.md  main.py
Topic_2/: README.md
Topic_3/: README.md
Topic_4/: README.md  REST-Project-1-soapui-project.xml  test-calculate-soapui-project.xml
Topic_5/: README.md
Topic_5/budget_planner_project/: app.js  index.html
Topic_6/: README.md
Topic_7/: README.md  main.py
Topic_8/: README.md
Topic_9/: README.md  YandexObjectStorage.py  minIO.py  test.txt
