[project]
name = "kp17-4semesterpoetry"
version = "0.1.0"
description = "лабораторная работа по компьютерному практикуму 17, 2 курс, 4 семестр"
authors = [
    {name = "Whover"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"
pdoc = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pylint = "^2.17.0"
ipdb = "^0.13.13"